--- a/resources/css/layouts/container.css
+++ b/resources/css/layouts/container.css
@@ -1,36 +1,40 @@
 .page-wrapper {
     margin-left: 256px;
-    transition: .2s ease-in;
+    transition: 0.2s ease-in;
     margin-right: 0px;
-
 }
 
 .simplebar-scrollbar:before {
-    background: var(--color-border) !important;
-  }
-  [data-simplebar], .simplebar-offset, .simplebar-content,.simplebar-wrapper,.simplebar-mask,.simplebar-content-wrapper{
-    outline:none !important;
-    border:none !important
-  }
+    background: var(--color-border);
+}
+[data-simplebar],
+.simplebar-offset,
+.simplebar-content,
+.simplebar-wrapper,
+.simplebar-mask,
+.simplebar-content-wrapper {
+    outline: none;
+    border: none;
+}
 
-  @keyframes gradient {
+@keyframes gradient {
     0% {
-      background-position: 0% 50%;
+        background-position: 0% 50%;
     }
     50% {
-      background-position: 100% 50%;
+        background-position: 100% 50%;
     }
     100% {
-      background-position: 0% 50%;
+        background-position: 0% 50%;
     }
-  }
+}
 
-@media screen and (max-width:1280px) {
-    .page-wrapper{
+@media screen and (max-width: 1280px) {
+    .page-wrapper {
         margin-left: 0px;
     }
 }
 
-[data-sidebar-type="mini-sidebar"] .page-wrapper-sub {
+[data-sidebar-type='mini-sidebar'] .page-wrapper-sub {
     margin-left: 15px;
 }
