--- a/resources/css/layouts/sidebar.css
+++ b/resources/css/layouts/sidebar.css
@@ -9,46 +9,46 @@
 
 .menu-sidebar {
     height: 100%;
-    width: 256px !important;
+    width: 256px;
     background: var(--bs-white);
     top: 0;
     left: 0px;
-    transition: left .4s ease-in-out;
+    transition: left 0.4s ease-in-out;
 }
 
 .sidebar-nav .caption {
-    padding-top: 20px !important;
-    margin-top: 20px !important;
+    padding-top: 20px;
+    margin-top: 20px;
     border-top: 1px solid var(--color-border);
 }
 
 .sidebar-nav .caption:first-child {
-    padding-top: 0 !important;
-    margin-top: 0px !important;
-    border-top: 0 !important;
+    padding-top: 0;
+    margin-top: 0px;
+    border-top: 0;
 }
 
 .sidebar-dropdown li a {
     opacity: 0.9;
     padding: 8px 16px;
-    box-shadow: none !important;
+    box-shadow: none;
 }
 .sidebar-dropdown li a.active {
     opacity: 1;
-    color: var(--color-primary) !important;
-}   
+    color: var(--color-primary);
+}
 
 .sidebar-dropdown li a {
-    background-color: transparent !important;
+    background-color: transparent;
 }
 
 .sidebar-dropdown li a:hover {
-    background-color: transparent !important;
+    background-color: transparent;
     opacity: 1;
 }
 
 .sidebar-dropdown li button:hover {
-    background-color: transparent !important;
+    background-color: transparent;
 }
 
 .sidebar-dropdown li .iconify--fad {
@@ -56,20 +56,21 @@
     width: 9px;
     margin: 0 4px;
 }
-.barnd-logo{
+.barnd-logo {
     min-height: 72px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.nav-link{
-display: block;
-font-size: 14px;
-color: #98a4ae;
-text-decoration: none;
-background: 0 0;
-border: 0;
-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+.nav-link {
+    display: block;
+    font-size: 14px;
+    color: #98a4ae;
+    text-decoration: none;
+    background: 0 0;
+    border: 0;
+    transition:
+        color 0.15s ease-in-out,
+        background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out;
 }
-
-
