--- a/resources/css/override/reboot.css
+++ b/resources/css/override/reboot.css
@@ -1,62 +1,71 @@
 .megamenu {
-  transform: translateY(38px) !important;
+    transform: translateY(38px);
 }
 
 .simplebar-scrollbar:before {
-  background: var(--color-border) !important;
+    background: var(--color-border);
 }
 
 .translate {
-  transform: translate(-88%, 40px) !important;
-  transition: 0.5s;
+    transform: translate(-88%, 40px);
+    transition: 0.5s;
 }
 .translate-lng {
-  transform: translate(-81%, 40px) !important;
-  transition: 0.5s;
+    transform: translate(-81%, 40px);
+    transition: 0.5s;
 }
 
 .h-n80 {
-  height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
 }
 
 /* styles/globals.css */
 .dropdown-enter {
-  opacity: 0;
-  transform: scale(0.95);
+    opacity: 0;
+    transform: scale(0.95);
 }
 
 .dropdown-enter-active {
-  opacity: 1;
-  transform: translate(0);
-  transition: opacity 150ms, transform 150ms;
+    opacity: 1;
+    transform: translate(0);
+    transition:
+        opacity 150ms,
+        transform 150ms;
 }
 
-.notification{
-  position: absolute !important;
-  left: 104px !important;
-  top: 0px !important;
-  min-width: 40px !important;
-  transform: translate(-108px, 48px) !important;
+.notification {
+    position: absolute;
+    left: 104px;
+    top: 0px;
+    min-width: 40px;
+    transform: translate(-108px, 48px);
 }
 
 .dropdown-leave {
-  opacity: 1;
-  transform: scale(1);
+    opacity: 1;
+    transform: scale(1);
 }
 
 .dropdown-leave-active {
-  opacity: 0;
-  transform: scale(0.95);
-  transition: opacity 150ms, transform 150ms;
+    opacity: 0;
+    transform: scale(0.95);
+    transition:
+        opacity 150ms,
+        transform 150ms;
 }
 
-.two-cols{
-  -webkit-columns: 4;
-  -moz-columns: 4;
-  columns: 4;
+.two-cols {
+    -webkit-columns: 4;
+    -moz-columns: 4;
+    columns: 4;
 }
 
-[data-simplebar], .simplebar-offset, .simplebar-content,.simplebar-wrapper,.simplebar-mask,.simplebar-content-wrapper{
-  outline:none !important;
-  border:none !important
+[data-simplebar],
+.simplebar-offset,
+.simplebar-content,
+.simplebar-wrapper,
+.simplebar-mask,
+.simplebar-content-wrapper {
+    outline: none;
+    border: none;
 }
