--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,10 +9,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-}
-
 :root {
     --color-primary: #3d64af;
     --color-secondary: #f4a261;
@@ -47,4 +43,157 @@ body {
     --color-info-emphasis: #3cacc8;
     --color-surface-ld: #ffffff;
     --color-bodytext: #98a4ae;
+}
+
+@layer components {
+    body {
+        @apply text-sm text-bodytext;
+    }
+
+    .dropdown {
+        @apply relative overflow-hidden rounded-md bg-white shadow-md dark:bg-dark dark:shadow-dark-md;
+    }
+
+    .card-title {
+        @apply font-semibold mb-1 text-lg text-dark dark:text-white;
+    }
+
+    .card-subtitle {
+        @apply text-15 text-bodytext;
+    }
+
+    /*heading text color*/
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @apply font-manropeSemiBold text-dark dark:text-white;
+    }
+
+    .border-ld {
+        @apply border-border dark:border-darkborder;
+    }
+
+    .bg-hover {
+        @apply hover:bg-lighthover hover:dark:bg-darkmuted;
+    }
+
+    .form-control input {
+        @apply w-full rounded-md border border-border bg-transparent text-sm dark:border-darkborder dark:bg-transparent;
+    }
+
+    .form-control-chat input {
+        @apply w-full rounded-md border-0 bg-transparent text-sm dark:bg-transparent;
+    }
+
+    .form-control-chat input:focus {
+        @apply w-full !border-0 bg-transparent text-sm ring-transparent dark:bg-transparent dark:ring-transparent;
+    }
+
+    .form-control-rounded input {
+        @apply w-full rounded-full border border-border bg-transparent text-sm dark:border-darkborder dark:bg-transparent;
+    }
+
+    .form-control-rounded input:focus {
+        @apply border-primary shadow-none outline-none ring-transparent ring-offset-0 dark:border-primary;
+    }
+
+    .form-control-textarea {
+        @apply w-full !rounded-md border border-border bg-transparent p-4 text-sm dark:border-darkborder dark:bg-transparent;
+    }
+
+    .form-control-textarea:focus {
+        @apply border-primary shadow-none outline-none ring-transparent ring-offset-0 dark:border-primary;
+    }
+
+    .form-control input:focus {
+        @apply border-primary shadow-none outline-none ring-transparent ring-offset-0 dark:border-primary;
+    }
+
+    .form-control-input {
+        @apply w-full rounded-md border border-border bg-transparent text-sm dark:border-darkborder dark:bg-transparent;
+    }
+
+    .form-control-input:focus {
+        @apply border-primary shadow-none outline-none ring-transparent ring-offset-0 dark:border-primary;
+    }
+
+    .form-control-validation input {
+        @apply rounded-md;
+    }
+
+    .form-rounded-md input {
+        @apply rounded-md;
+    }
+
+    .input-center input {
+        @apply text-center;
+    }
+
+    .elipse {
+        @apply h-[10px] w-[18px];
+    }
+
+    input::placeholder {
+        @apply text-bodytext;
+    }
+
+    .select-option select {
+        @apply font-medium w-auto border-0 bg-muted py-2 pe-9 ps-4 text-darklink focus:border-0 focus:ring-0 dark:text-white/80;
+    }
+
+    .select-md select {
+        @apply border-ld w-full rounded-md bg-transparent text-sm focus:border-primary focus:ring-0 dark:bg-darkgray dark:focus:border-primary;
+    }
+
+    .checkbox {
+        @apply h-[18px] w-[18px] border border-border bg-transparent focus:ring-0 focus:ring-offset-0 dark:border-darkborder;
+    }
+
+    .text-primary-ld {
+        @apply hover:text-primary dark:hover:text-primary;
+    }
+
+    /* Apps */
+    .left-part {
+        @apply border-ld w-80 border-e p-6;
+    }
+
+    .btn-circle {
+        @apply flex h-8 w-8 items-center justify-center !rounded-full p-0;
+    }
+
+    .btn-circle-hover {
+        @apply flex h-9 w-9 cursor-pointer items-center justify-center !rounded-full bg-transparent hover:bg-lightprimary hover:text-primary;
+    }
+
+    .text-ld {
+        @apply text-dark dark:text-white;
+    }
+
+    .avatar-full img {
+        @apply h-full w-full;
+    }
+
+    .sorting button {
+        @apply bg-transparent p-0 text-dark dark:text-white;
+    }
+
+    .sorting button:hover {
+        @apply bg-transparent;
+    }
+
+    .sorting button span {
+        @apply p-0;
+    }
+
+    .sorting ul li {
+        @apply px-4 py-2;
+    }
+
+    .sorting ul li button:hover {
+        @apply hover:text-primary;
+    }
 }
