--- a/resources/css/layouts/sidebar.css
+++ b/resources/css/layouts/sidebar.css
@@ -8,12 +8,13 @@
 }
 
 .menu-sidebar {
-    height: 100%;
     width: 256px;
     background: var(--bs-white);
     top: 0;
     left: 0px;
     transition: left 0.4s ease-in-out;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar-nav .caption {
@@ -56,11 +57,11 @@
     width: 9px;
     margin: 0 4px;
 }
-.barnd-logo {
-    min-height: 72px;
+.brand-logo {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    background-color: inherit;
 }
 .nav-link {
     display: block;
@@ -73,4 +74,23 @@
         color 0.15s ease-in-out,
         background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out;
+}
+
+.sidebar-scrollable {
+    flex-grow: 1;
+    overflow-y: auto;
+    height: calc(100vh - 72px);
+}
+
+/* Existing styles tetap dipertahankan */
+.sidebar-nav .caption {
+    padding-top: 20px;
+    margin-top: 20px;
+    border-top: 1px solid var(--color-border);
+}
+
+.sidebar-nav .caption:first-child {
+    padding-top: 0;
+    margin-top: 0px;
+    border-top: 0;
 }
