--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,10 +4,22 @@
 @import './layouts/header.css';
 @import './theme/default-colors.css';
 @import './override/reboot.css';
+@import 'simplebar-react/dist/simplebar.min.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.simplebar-scrollbar::before {
+    background-color: #f6803b;
+    opacity: 1;
+    border-radius: 9999px;
+}
+
+.simplebar-track.simplebar-vertical {
+    width: 8px;
+    right: 2px;
+}
 
 :root {
     --color-primary: #3d64af;
