--- a/resources/css/theme/default-colors.css
+++ b/resources/css/theme/default-colors.css
@@ -1,7 +1,7 @@
 :root {
     --color-primary: #3d64af;
     --color-secondary: #f4a261;
-    --color-primary-emphasis: #3d64af;
+    --color-primary-emphasis: #274172;
     --color-secondary-emphasis: #1cc3bd;
     --color-lightprimary: #635bff40;
     --color-lightsecondary: #16cdc740;
