--- a/resources/css/layouts/sidebar.css
+++ b/resources/css/layouts/sidebar.css
@@ -10,7 +10,7 @@
 .menu-sidebar {
     height: 100%;
     width: 256px;
-    background: #1f6fd8;
+    background: #c2c2c2;
     top: 0;
     left: 0px;
     transition: left 0.4s ease-in-out;
