--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,7 +25,7 @@
     --color-primary: #3d64af;
     --color-secondary: #f4a261;
     --color-primary-emphasis: #274172;
-    --color-secondary-emphasis: #1cc3bd;
+    --color-secondary-emphasis: #9c5c27;
     --color-lightprimary: #635bff40;
     --color-lightsecondary: #16cdc740;
     --color-info: #46caeb;
@@ -37,7 +37,7 @@
     --color-lightinfo: #46caeb40;
     --color-lightwarning: #f8c20a40;
     --color-white: #fff;
-    --color-dark: #1f2a3d;
+    --color-dark: #000000;
     --color-border: #e0e6eb;
     --color-bordergray: #f3f3f4;
     --color-darkborder: #333f55;
@@ -47,7 +47,7 @@
     --color-darklink: #29343d;
     --color-lightgray: #f4f7fb;
     --color-lighthover: #f6f7f9;
-    --color-darkgray: #1a2537;
+    --color-darkgray: #222222;
     --color-sky: #0a2540;
     --color-error-emphasis: #d9577c;
     --color-warning-emphasis: #d3a509;
