--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -208,4 +208,25 @@
     .sorting ul li button:hover {
         @apply hover:text-primary;
     }
+
+    /* Untuk Chrome, Edge, dan Safari */
+    ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(100, 116, 139, 0.5); /* slate-500/50 */
+        border-radius: 6px;
+        border: 2px solid transparent;
+        background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(100, 116, 139, 0.8); /* slate-500/80 */
+    }
 }
